--- a/Basic/cochlear_ltd.html
+++ b/Basic/cochlear_ltd.html
@@ -1,85 +1,57 @@
+name: Run Stock Analysis
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cochlear Ltd (COH) Analysis</title>
-</head>
-<body>
-    <h3>Current Performance</h3>
-<strong>- - Revenue and Earnings Growth:</strong>
-<p></p>
-<p>Cochlear Ltd reported a revenue growth of 12% year-on-year, driven primarily by strong demand for its hearing implants amid an aging population and advancements in technology. Earnings before interest and taxes (EBIT) increased by 15%, reflecting improved operational efficiencies and a larger customer base.</p>
-<strong>- - Profit Margins:</strong>
-<p></p>
-<p>The company's net profit margin is currently at 18%, a strong indicator of its operational efficiency and pricing power in the medical devices sector. The margin improvement can be attributed to higher sales volume and cost management strategies.</p>
-<strong>- - Earnings Per Share (EPS):</strong>
-<p></p>
-<p>EPS for Cochlear is reported at $2.45, marking a 10% increase from the previous year. This solid growth is driven by robust sales across its product lines, particularly in cochlear implants, which have been gaining wider acceptance.</p>
-<strong>- - Return on Equity (ROE):</strong>
-<p></p>
-<p>Cochlear's ROE stands at a healthy 22%, showcasing effective use of equity to generate profits. This metric reflects the company's ability to maximize shareholder value through strategic investments and sustained growth in its product offerings.</p>
+on:
+  schedule:
+    # Runs Monday to Friday at 8am AEST (which is 10pm UTC, Sunday to Thursday)
+    - cron: '0 22 * * 0-4'  # Sunday to Thursday at 10pm UTC, which is Monday to Friday at 8am AEST
+  workflow_dispatch:  # This allows manual triggering of the workflow
 
-    <h3>Valuation Metrics</h3>
-<strong>- - Price-to-Earnings (P/E) Ratio:</strong>
-<p></p>
-<p>The current P/E ratio for Cochlear is 30, reflecting a premium valuation within the medical device industry. This high ratio indicates that investors are willing to pay more for future growth potential, which Cochlear consistently demonstrates.</p>
-<strong>- - P/E Ratio Compared to the Industry Average:</strong>
-<p></p>
-<p>Cochlear's P/E is significantly above the industry average of 25, suggesting that the market has high expectations for its growth trajectory, particularly due to its strong position in innovative medical solutions for hearing loss.</p>
+jobs:
+  run-analysis:
+    runs-on: ubuntu-latest
 
-    <h3>Analyst Recommendations</h3>
-<strong>- - Consensus Rating:</strong>
-<p></p>
-<p>Analysts have a 'Buy' consensus on Cochlear Ltd, driven by its consistent growth, innovative product pipeline, and favorable industry trends. The overall sentiment reflects confidence in Cochlear’s strategic direction and market opportunity.</p>
-<strong>- - Price Targets:</strong>
-<p></p>
-<p>The average analyst price target for Cochlear is set at AUD 240, with a range from AUD 225 to AUD 250. This indicates a potential upside of approximately 15% from current trading levels, suggesting that analysts see continued growth in market demand.</p>
+    permissions:
+      contents: write  # Ensure the runner can write to the repo
 
-    <h3>Insider Activity</h3>
-<strong>- - Recent Transactions:</strong>
-<p></p>
-<p>Recent insider activity includes minor buying by executives, indicating their confidence in the long-term growth prospects of the company. There has been minimal selling, which is typical in companies with strong performance metrics.</p>
-<strong>- - Overall Sentiment:</strong>
-<p></p>
-<p>Insider sentiment appears positive, with executives showing willingness to invest in their own company, underscoring a belief in Cochlear's strategic initiatives and operational plans.</p>
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    <h3>Dividend Analysis</h3>
-<strong>- - Dividend Yield:</strong>
-<p></p>
-<p>Cochlear offers a dividend yield of 1.5%, reflecting a balance between returning capital to shareholders and reinvesting for growth. While the yield might seem modest, it indicates a commitment to shareholder returns.</p>
-<strong>- - Dividend Payout Ratio:</strong>
-<p></p>
-<p>The payout ratio is currently at 35%, which suggests that Cochlear is returning a reasonable portion of its income while retaining significant capital for reinvestment and growth initiatives.</p>
-<strong>- - Dividend History:</strong>
-<p></p>
-<p>Cochlear has a strong track record of progressive dividend payments, showing consistency and a commitment to enhancing shareholder value over time. The company has increased its dividend annually, reflecting growth and strong cash flows.</p>
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.x'
 
-    <h3>Market and Sector Conditions</h3>
-<strong>- - Relevant Sector Trends:</strong>
-<p></p>
-<p>The medical device sector, particularly hearing solutions, is experiencing growth due to demographic shifts (aging population) and technological advancements. Cochlear is well-positioned to leverage these trends with its innovative product line, including advancements in implantable devices and sound processors.</p>
-<strong>- - Economic Indicators:</strong>
-<p></p>
-<p>The economic environment supports investment in healthcare as governments continue to prioritize health technology funding. However, supply chain disruptions and inflationary pressures are potential risks that could affect margins and growth.</p>
-<strong>- - Regulatory Environment:</strong>
-<p></p>
-<p>Cochlear operates in a heavily regulated industry, but the regulatory framework in key markets remains supportive of innovation in medical devices. The company benefits from favorable policies promoting hearing health and access to hearing solutions.</p>
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    <h3>General Sentiment Analysis</h3>
-<strong>- - Media and News Sentiment:</strong>
-<p></p>
-<p>Recent media coverage of Cochlear has been largely positive, emphasizing the company’s leadership in hearing implants and its positive impact on quality of life. Innovations in technology have been a key focus in news reporting.</p>
-<strong>- - Social Media and Public Sentiment:</strong>
-<p></p>
-<p>Public sentiment on social media platforms is generally favorable, with many users discussing the life-changing benefits of Cochlear's products. Customer testimonials highlight satisfaction with listening experiences post-implantation.</p>
-<strong>- - Analyst Sentiment:</strong>
-<p></p>
-<p>Analyst sentiment remains optimistic, reflecting confidence in Cochlear’s growth capacity and its prospects in a market that is poised for substantial growth driven by advancements in health technology.</p>
+      - name: Create directories
+        run: |
+          mkdir -p Basic "Basic Pro" Premium
 
-    <h3>Summary</h3>
-<p>Cochlear Ltd is currently experiencing strong financial performance characterized by double-digit revenue and earnings growth, supported by a robust product pipeline and favorable market dynamics. With a solid ROE and healthy profit margins, the company is well-positioned for continued growth. Although its premium valuation indicates high market expectations, the consensus among analysts is bullish, with a 'Buy' recommendation. The company maintains a positive outlook regarding its dividend policy and insider sentiment is encouraging, suggesting confidence in future performance. Overall, Cochlear's strategic focus on innovation in the hearing health sector, paired with its sound financial metrics, makes it an appealing investment opportunity within the healthcare sector.</p>
+      - name: Run Analysis Script
+        env:
+          OPENAI: ${{ secrets.OPENAI }}
+        run: python analysis_fetch_200_Final.py
 
-</body>
-</html>
+      # Get the current day of the week
+      - name: Get current day
+        id: date
+        run: echo "::set-output name=day::$(date +%A)"
+
+      # Copy HTML files to Basic and Basic Pro on Monday AEST only
+      - name: Copy HTML files to Basic and Basic Pro (Monday AEST only)
+        if: github.event_name == 'schedule' && steps.date.outputs.day == 'Monday'
+        run: |
+          cp Premium/*.html Basic/
+          cp Premium/*.html "Basic Pro"/
+
+      - name: Commit and push changes
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git add .
+          git commit -m "Update HTML files" || echo "No changes to commit"
+          git push
